2nd Draft of Security Plugin API design (CORE-207)
Co-authored-by: Paul Gallagher <132362215+TelicentPaul@users.noreply.github.com>
Co-authored-by: Rob Walpole <rob.walpole@telicent.io>
Co-authored-by: Rob Levi <rob.levi@telicent.io>

- Add new RequestContext API
- JAX-RS implementation of RequestContext API
- Adds support for the new Security Plugin RequestContext into the JAX-RS
  Base Server module including some basic test coverage of its
  functionality
- Retrieving Entitlements is now based on passing in a RequestContext so
  the plugin has more information to work with.
- Authorizer now has separate canRead(), canWrite() and canUse() methods
  for making different kinds of access decisions.